# v1ca1

./: .gitignore  AGENTS.md  README.md  TODO.md  environment.yml  environment_old.yml  pyproject.toml
paper_figures/assets/: README.md
src/v1ca1/: __init__.py  analogous_cycles_pd.py  communication_subspace.py  compare_fr.py  compute_conditional_intensity_2d_trajectory_cv.py  compute_conditional_intensity_acceleration_cv.py  compute_conditional_intensity_headdir.py  compute_conditional_intensity_headdir_speed.py  compute_conditional_intensity_headdir_velocity_cv.py  compute_conditional_intensity_speed.py  compute_conditional_intensity_trajectory.py  compute_likelihood.py  compute_sta.py  fit_2d_decode_sleep_box.py  fit_headdir_decode_trajectory.py  fit_headdir_speed_decode.py  fit_headdir_velocity_decode.py  fit_headdir_velocity_decode_cv.py  plot_1d_place_field_trajectory.py  plot_2d_place_raster_sleep_box.py  (+6 more)
src/v1ca1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_clean_dlc_position.py  test_combine_clean_dlc_position.py  test_compare_epoch_motor_behavior.py  test_consolidate_sorting.py  test_convert_legacy_position_pickles.py  test_detect_ripples.py  test_export_augmented_nwb.py  test_extract_imu_from_rec.py  test_fit_wtrack_geometry.py  test_fuse_head_position_imu.py  test_get_immobility_times.py  test_get_sleep_times.py  test_get_theta_phase.py  test_get_timestamps.py  test_get_trajectory_times.py  test_paper_figure_1.py  test_paper_figure_2.py  test_paper_figure_3.py  test_paper_figures.py  test_paper_w_track_schematic.py  test_plot_place_field_heatmap.py  test_plot_reward_timing.py  test_plot_ripple_modulation.py  test_plot_sleep_phases.py  test_plot_theta_phase_preference.py  test_plot_voltage_snippet.py  test_plot_wtrack_schematic.py  test_predict_1d.py  test_replace_epoch_bounds.py  test_ripple_decoding_comparison.py  test_ripple_decoding_glm.py  test_ripple_glm.py  test_ripple_glm2.py  test_ripple_glm3.py  test_ripple_glm_binned.py  test_ripple_glm_comparison.py  test_ripple_glm_select_ridge.py  test_ripple_trajectory_identity.py  test_screen_xcorr.py  (+11 more)
(+215 files in other folders)
