[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v1ca1"
dynamic = ["version"]
description = "Analysis code for the Lee V1-CA1 project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
analysis = [
    "matplotlib>=3.7",
    "mountainsort4>=1.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scikit-learn>=1.3",
    "seaborn>=0.13",
    "spikeinterface>=0.100",
    "pynapple>=0.7",
    "pynwb>=2.0",
    "probeinterface>=0.2",
    "xarray>=2023.0",
]
figurl = [
    "kachery-cloud>=0.4",
    "sortingview>=0.13",
]
glm = [
    "jax>=0.4",
    "nemos",
]
test = [
    "pytest>=8.0",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "v1ca1.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
