[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v1ca1"
dynamic = ["version"]
description = "Analysis code for the Lee V1-CA1 project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
analysis = [
    "kachery-cloud>=0.4",
    "matplotlib>=3.7",
    "mountainsort4>=1.0",
    "nemos>=0.2.7",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scikit-learn>=1.3",
    "seaborn>=0.13",
    "sortingview>=0.13",
    "spikeinterface>=0.100",
    "pynapple>=0.7",
    "pynwb>=2.0",
    "position_tools",
    "probeinterface>=0.2",
    "ripple_detection",
    "track_linearization",
    "xarray>=2023.0",
]
figurl = [
    "kachery-cloud>=0.4",
    "sortingview>=0.13",
]
glm = [
    "jax>=0.4",
]
test = [
    "pytest>=8.0",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "v1ca1.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
